# stoolap-desktop

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  sql_utils.rs
src-tauri/src/commands/: connection.rs  data.rs  mod.rs  query.rs  schema.rs  system.rs
src/renderer/: index.html
src/renderer/src/: App.tsx  globals.css  main.tsx
src/renderer/src/components/common/: error-boundary.tsx  keyboard-shortcuts.tsx  stoolap-logo.tsx
src/renderer/src/components/data/: row-editor.tsx  table-viewer.tsx
src/renderer/src/components/dialogs/: about-dialog.tsx  alter-table.tsx  backup-dialog.tsx  connect-dialog.tsx  create-index.tsx  create-table.tsx  create-view.tsx  restore-dialog.tsx  shortcuts-help.tsx  update-dialog.tsx  vector-search-dialog.tsx
src/renderer/src/components/editor/: editor-tabs.tsx  query-toolbar.tsx  sql-editor.tsx
src/renderer/src/components/explain/: explain-view.tsx
src/renderer/src/components/layout/: app-shell.tsx  sidebar.tsx  toolbar.tsx
src/renderer/src/components/results/: data-grid.tsx  results-panel.tsx
src/renderer/src/components/schema/: table-tree.tsx
src/renderer/src/components/ui/: alert-dialog.tsx  checkbox.tsx  command.tsx  (+13 more)
src/renderer/src/hooks/: use-connection.ts  use-mod-key.ts  use-query-execution.ts  use-schema.ts
src/renderer/src/lib/: api-client.ts  native.ts  sql-dump.ts  types.ts  utils.ts
